# mbw-app/src/test/resources/openapi/api-docs.snapshot.json
@@ -25,6 +25,34 @@
         }
       }
     },
+    "/api/v1/auth/refresh-token" : {
+      "post" : {
+        "tags" : [ "auth-controller" ],
+        "operationId" : "refreshToken",
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/RefreshTokenRequest"
+              }
+            }
+          },
+          "required" : true
+        },
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/LoginResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/auth/login-by-phone-sms" : {
       "post" : {
         "tags" : [ "auth-controller" ],
@@ -126,20 +154,15 @@
         },
         "required" : [ "phone" ]
       },
-      "LoginByPhoneSmsRequest" : {
+      "RefreshTokenRequest" : {
         "type" : "object",
         "properties" : {
-          "phone" : {
+          "refreshToken" : {
             "type" : "string",
             "minLength" : 1
-          },
-          "code" : {
-            "type" : "string",
-            "minLength" : 1,
-            "pattern" : "^\\d{6}$"
           }
         },
-        "required" : [ "code", "phone" ]
+        "required" : [ "refreshToken" ]
       },
       "LoginResponse" : {
         "type" : "object",
@@ -155,6 +178,21 @@
             "type" : "string"
           }
         }
+      },
+      "LoginByPhoneSmsRequest" : {
+        "type" : "object",
+        "properties" : {
+          "phone" : {
+            "type" : "string",
+            "minLength" : 1
+          },
+          "code" : {
+            "type" : "string",
+            "minLength" : 1,
+            "pattern" : "^\\d{6}$"
+          }
+        },
+        "required" : [ "code", "phone" ]
       },
       "LoginByPasswordRequest" : {
         "type" : "object",
